--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CycloneDXToDependencyTrack
+name: CI
 
 # Controls when the action will run. 
 on: [push]
@@ -25,7 +25,7 @@ jobs:
         id: riskscoreFromDT
         uses:  Quobis/action-owasp-dependecy-track-check@main
         with:
-          url: 'http://localhost:8080'
+          url: 'https://dtrack.quobis.com'
           key: '${{ secrets.SECRET_OWASP_DT_KEY }}'
           language: 'php'
       
